<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BabyGender Predictor</string>
    <string name="action_settings">Settings</string>
<string name="text_instructor">
        <![CDATA[
        <h1>BABY GENDER PREDICTOR </h1>
        <h2>PREDICTION: Conception Month + Woman’s Age => Gender </h2>
        <p>When used for achieving its initial purpose: gender prediction, the Baby Gender Predictor method determines the fetal sex, considering the lunar month of conception (the date have sexual intercourse) and the lunar age of the mother, at the time of conception.</p>
        ]]>
    </string>
    <string name="text_instructor1">
        <![CDATA[
        <h1>BABY GENDER PREDICTOR </h1>
        <h2>SELECTION: Woman’s Age + Desired Gender => Conception Dates</h2>
        <p>When used for pre-conception sex selection, this app determines the lunar months in which a child of the chosen sex is more likely to be conceived, taking into account the her lunar age at the moment of becoming pregnant. In the case of the parents trying to figure out how to conceive a boy, Baby Gender Predictor will tell you in what months a male offspring could be conceived.</p>
        ]]>
    </string>
    <string name="text_gender_checker">Boy/Girl Test</string>
    <string name="text_pick_gender">Pregnant Plan</string>
    <string name="text_sologan">Wondering whether you are having a boy or girl?\n Just use it ! </string>
    <string name="text_xxxmonth">3. XXX Month</string>
    <string name="text_mom_birthday">1. Mom\'s birthday?</string>

    <!--<string name="text_mom_birthday">Mom's Birthday</string>-->
    <!--<string name="text_xxx_month">XXX Month</string>-->
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <!--
         Content description for the second selector in the time picker, which displays
         selectable five-second intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_minutes">Select minutes</string>
    <!-- Accessibility announcement for second circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_seconds">Select seconds</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="mdtp_item_is_selected"><xliff:g example="2013" id="item">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="mdtp_deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_placeholder" translatable="false">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_separator" translatable="false">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_radial_numbers_typeface" translatable="false">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_sans_serif" translatable="false">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="text_solar_birthday">Solar date:</string>
    <string name="text_lunar_birthday">Lunar date:</string>
    <string name="text_gender_check">Gender Check</string>
    <string name="text_predictor">Show Plan</string>
    <string name="text_loading">Loading...</string>
    <string name="text_time_get_pregnat">2. Conception date? </string>
    <string name="text_solar_pregnat">Solar date:</string>
    <string name="text_lunar_pregnat">Lunar date:</string>
    <string name="text_boy">Boy</string>
    <string name="text_girl">Girl</string>
    <string name="text_boyorgirl">2. Boy or Girl? </string>
    <string name="text_gender_check_results">Please input the mom\'s birthday and the conception date.</string>
    <string name="toast_warning">Please enter input exactly! Maybe you are not over the age of 18?</string>
    <string name="text_lunar_birthday_tv">"Lunar birthday: "</string>
    <string name="text_lunar_conception_date_tv">"Lunar Conception Date: "</string>
    <string name="text_warning_second_activity">Please check the input again!</string>
    <string name="text_dialog_cancel">Dismiss</string>
    <string name="text_to_conceive">"To conceive a "</string>
    <string name="text_to_concevie2">" baby, try to have sexual intercourse in the following months (Please find detail dates in the calendar bellow): \n"</string>
    <string name="text_at_the_year">"At the year of "</string>

    <string-array name="range_years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
