<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marknguyen.babygenderpredictor.TimePredictorActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/homepredict" />

    <ScrollView
        android:id="@+id/scroll_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_time_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:singleLine="false"
            android:textStyle="bold" />
    </ScrollView>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_text"
        android:layout_above="@+id/ln"
        android:background="#FFFFFF"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/fab_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay" />

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_mom_birthday"
                android:textStyle="bold" />

            <!--<ImageButton-->
            <!--android:id="@+id/btn_choose_birthday_screen2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_marginLeft="@dimen/fab_margin"-->
            <!--android:src="@android:drawable/ic_menu_my_calendar"-->
            <!--android:textStyle="bold" />-->
            <datepicker.DatePicker
                android:id="@+id/long_date"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--<TextView-->
        <!--android:id="@+id/tv_solar_birthday2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/text_solar_birthday"-->
        <!--android:textStyle="bold" />-->

        <TextView
            android:id="@+id/tv_lunar_birthday2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lunar age: "
            android:textStyle="bold" />

        <Switch
            android:id="@+id/sw_boyorgirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/text_boyorgirl"
            android:textOff="@string/text_girl"
            android:textOn="@string/text_boy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. Range of years"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_rangeOfAges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/range_years" />
        </LinearLayout>

        <materialdesign.views.ButtonRectangle
            android:id="@+id/btn_time_predictor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/mdtp_dark_gray"
            android:text="@string/text_predictor" />

    </LinearLayout>


</RelativeLayout>
